HotFix - g_css #1 - Changed body's overflow to overflow-x to make sure that the website can be scrolled down...

--- a/styles/main_page_styles/general.css
+++ b/styles/main_page_styles/general.css
@@ -4,25 +4,25 @@ Secondary Color: Teal
 Accent Color: Cyan / Aqua
 */
 :root {
-    --color-palette-dominant: #36454f;
-    --color-palette-complementary: #008080;
-    --color-palette-accent: #ffa500;
-    --color-palette-light-neutral: #f0f0f0;
-    --color-palette-dark-neutral: #2c3e50;
-    --color-palette-additional-accent: #e74c3c;
+	--color-palette-dominant: #36454f;
+	--color-palette-complementary: #008080;
+	--color-palette-accent: #ffa500;
+	--color-palette-light-neutral: #f0f0f0;
+	--color-palette-dark-neutral: #2c3e50;
+	--color-palette-additional-accent: #e74c3c;
 }
 
 /* Remove any existing elements margins and paddings */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    background-color: var(--color-palette-dominant);
-    font-family: "Rubik";
-    overflow: hidden;
+	background-color: var(--color-palette-dominant);
+	font-family: "Rubik";
+	overflow-x: hidden;
 }
 
 /* | Class Description |
@@ -32,14 +32,11 @@ body {
     should resolve this issue.
  */
 .outline-text {
-    --outline-thickness: 1px;
-    text-shadow: var(--outline-thickness) var(--outline-thickness) 0 black,
-        calc(-1 * var(--outline-thickness)) calc(-1 * var(--outline-thickness))
-            0 black,
-        var(--outline-thickness) calc(-1 * var(--outline-thickness)) 0 black,
-        calc(-1 * var(--outline-thickness)) var(--outline-thickness) 0 black,
-        0 var(--outline-thickness) 0 black,
-        0 calc(-1 * var(--outline-thickness)) 0 black,
-        var(--outline-thickness) 0 0 black,
-        calc(-1 * var(--outline-thickness)) 0 0 black;
+	--outline-thickness: 1px;
+	text-shadow: var(--outline-thickness) var(--outline-thickness) 0 black,
+		calc(-1 * var(--outline-thickness)) calc(-1 * var(--outline-thickness)) 0 black,
+		var(--outline-thickness) calc(-1 * var(--outline-thickness)) 0 black,
+		calc(-1 * var(--outline-thickness)) var(--outline-thickness) 0 black, 0 var(--outline-thickness) 0 black,
+		0 calc(-1 * var(--outline-thickness)) 0 black, var(--outline-thickness) 0 0 black,
+		calc(-1 * var(--outline-thickness)) 0 0 black;
 }
